# humchess

./: .gitignore  CLAUDE.md  main.py  plan.md  pyproject.toml
configs/: model.yml
data/: download_lichess.py
humchess/: inference.py  train.py
humchess/data/: benchmark_pgn_dataset.py  build_parquet.py  pgn_dataset.py  tokenization.py
humchess/model/: transformer.py
notebooks/: test_training.ipynb
tests/: test_model.py  test_parquet_dataset.py  test_pgn_dataset.py  test_tokenization.py
web-inference/: README.md  export_onnx.py  server.py
web-inference/static/: index.html
web-inference/static/css/: style.css
web-inference/static/js/: app.js  inference.js  tokenization.js
